--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-euiv="X-UA-Compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
+        <link rel="shortcut icon" type="image/png" href="favicon.png">
         <title>Bangladesh | Explore the beauty of greeeland </title>
 
     </head> 
